Release 4.28:
	- simplify Excel handling to remove dependency on mmap and tmpfile
	- add patch from wynnw to fix crash reading some local files
	- fixed issue where libhxl can't read directly from sys.stdin

2022-12-12 Release 4.27.3
	- decreasing log level to reduce the amount of logs generated by the HXL Proxy (in prod)

2022-11-25 Release 4.27.2
	- use structlog module
	- add hxl.util.logup function to include function name in log message
	- switch to logup in input module
	- add extra help text for hxlcount script

2022-09-30 Release 4.27
	- raise a HXLHTMLException (subclass of HXLIOException) when HTML markup found
	- clean dates that are integers, assuming seconds or days since epoch (with cutouts for years and month days)
	- bypass RequestResponseIOWrapper, because it's causing grief; need to make sure content still gets uncompressed
	- fix input options for secondary datasets in scripts (e.g. an appended or joined dataset)
	- more debug logging about HXL hashtag detection
	- add a new logger to hxl.REMOTE_ACCESS specifically for external URL access
	- various command-line script updates and fixes

2022-08-05 Release 4.26
	- use loglevel CRITICAL only for infrastructure failures
	- don't put tracebacks in logging (avoid logger.exception())

2022-07-15 Release 4.25.2
	- raise exception for HTML input (prevents tagger exploit in HXL Proxy)
	- make hxl.input.munge_url() public
	- remove default tags for hxlcount script so that it can just count lines of data

2022-06-28 Release 4.25.1
	- support optionally filling merged areas (XLS and XLSX only)
	- support optionally scanning CKAN datasets for the first HXLated resource (in hxl.data(), not make_input())
	- support Google Sheets interactive view URLs for XLSX files (but not tab identifiers)
	- make Excel workbook handling more efficient
	- add --encoding option to all command-line scripts (tested with CSV)
	- add --expand-merged option to all comand-line scripts